--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.6.3",
     "@react-native-community/checkbox": "^0.2.2",
+    "@react-native-firebase/app": "^6.2.0",
+    "@react-native-firebase/messaging": "^6.2.0",
     "react": "16.9.0",
     "react-native": "0.61.4",
     "react-native-elements": "^1.2.7",
