--- a/package.json
+++ b/package.json
@@ -3,21 +3,26 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
-    "start": "react-native start",
+    "android": "npx react-native run-android",
+    "ios": "npx react-native run-ios",
+    "start": "npx react-native start",
     "test": "jest",
     "lint": "eslint ."
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.6.3",
     "@react-native-community/checkbox": "^0.2.2",
-    "@react-native-firebase/app": "^6.2.0",
-    "@react-native-firebase/messaging": "^6.2.0",
+    "@react-native-community/datetimepicker": "^2.3.0",
+    "@react-native-firebase/app": "^6.3.4",
+    "@react-native-firebase/messaging": "^6.3.4",
     "react": "16.9.0",
-    "react-native": "0.61.4",
+    "react-native": "^0.61.5",
     "react-native-elements": "^1.2.7",
+    "react-native-extra-dimensions-android": "https://github.com/Sunhat/react-native-extra-dimensions-android/",
     "react-native-gesture-handler": "^1.5.1",
+    "react-native-modal": "^11.5.6",
+    "react-native-multiple-select": "^0.5.5",
+    "react-native-push-notification": "https://github.com/kevinchristianto/react-native-push-notification",
     "react-native-reanimated": "^1.4.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
